add company-docs page

--- a/lk-vladelec-zayavka.html
+++ b/lk-vladelec-zayavka.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
     <link rel="stylesheet" href="dist/css/styles.css">
-    <title>iKapitalist - Просмотр заявки</title>
+    <title>iKapitalist - Заявка</title>
 </head>
 
 <body>
@@ -166,7 +166,8 @@
                             <span class="request__date">23 авг. в 18:22</span>
                         </div>
                         <div class="request-menu request__menu">
-                            <a href="#" class="tab-btn tab-btn_request tab-btn_active request-menu__link">Заявка</a>
+                            <a href="./lk-vladelec-zagruzka-doc.html" class="tab-btn tab-btn_request tab-btn_selected request-menu__link">Документы компании</a>
+                            <a href="./lk-vladelec-zayavka.html" class="tab-btn tab-btn_request tab-btn_active request-menu__link">Заявка</a>
                             <a href="#" class="tab-btn tab-btn_request request-menu__link">Отчетность</a>
                             <a href="#" class="tab-btn tab-btn_request request-menu__link">Документы</a>
                             <a href="#" class="tab-btn tab-btn_request request-menu__link">Договоры</a>
@@ -333,7 +334,7 @@
                                     </div>
                                     <div class="request-item request__item box">
                                         <div class="request-item__header">
-                                            <h3 class="lk-title3 lk-title3_medium lk-title3_blue">Учеридитель</h3>
+                                            <h3 class="lk-title3 lk-title3_medium lk-title3_blue">Учредитель</h3>
                                             <button class="request-item__dlt">Удалить</button>
                                         </div>
                                         <div class="field request-item__field">
@@ -354,7 +355,7 @@
                                         <div class="field request-item__field">
                                             <input type="text" name="company-name" class="field__input"
                                                 placeholder="111111111111">
-                                            <span class="field__text">ИИН учеридетеля</span>
+                                            <span class="field__text">ИИН учредителя</span>
                                         </div>
                                         <div class="field request-item__field">
                                             <input type="text" name="company-name" class="field__input"
@@ -367,7 +368,7 @@
                                             <span class="field__text">+7 (777) 777-77-77</span>
                                         </div>
                                     </div>
-                                    <button class="request__add-item">Добавить учередителя</button>
+                                    <button class="request__add-item">Добавить учредителя</button>
                                 </div>
                             </div>
                         </div>
