add company-docs-second page

--- a/lk-vladelec-zagruzka-doc.html
+++ b/lk-vladelec-zagruzka-doc.html
@@ -206,11 +206,11 @@
                                         </div>
                                         <div class="doc-item__group">
                                             <div class="doc-item__btns">
-                                                <div class="doc-item__elem doc-item__btns-item">Согласие ПКБ по учредителю</div>
+                                                <div class="agreement-elem doc-item__btns-item">Согласие ПКБ по учредителю</div>
                                                 <button class="lk-btn doc-item__btns-item">Сформировать</button>
                                             </div>
                                             <div class="doc-item__btns">
-                                                <div class="doc-item__elem doc-item__btns-item">Согласие ПКБ наименование ЮР лица</div>
+                                                <div class="agreement-elem doc-item__btns-item">Согласие ПКБ наименование ЮР лица</div>
                                                 <button class="lk-btn doc-item__btns-item">Подписать</button>
                                             </div>
                                         </div>
@@ -225,7 +225,7 @@
     </div>
     <div class="mobile-menu">
         <div class="mobile-menu__list">
-            <div class="mobile-menu__item mobile-menu__item_active">
+            <div class="mobile-menu__item">
                 <a href="./lk-spisok-sdelok.html" class="mobile-menu__link">
                     <div class="mobile-menu__icon-box">
                         <img src="dist/images/icons/sidebar/handshake.svg" alt="" class="mobile-menu__icon">
@@ -257,7 +257,7 @@
                     <span class="mobile-menu__text">Уведомления</span>
                 </a>
             </div>
-            <div class="mobile-menu__item">
+            <div class="mobile-menu__item mobile-menu__item_active">
                 <button class="mobile-menu__link open-sidebar">
                     <div class="mobile-menu__icon-box">
                         <img src="dist/images/icons/lk-menu.svg" alt="" class="mobile-menu__icon">
