--- a/lk-payment.html
+++ b/lk-payment.html
@@ -164,8 +164,8 @@
                         <div class="payment__body">
                             <div class="row">
                                 <div class="col-xl-7">
-                                    <div class="payment__name tdu">Частная компания iKapitalist Ltd</div>
-                                    <div class="payment__bin tdu">БИН: 191140900129</div>
+                                    <div class="payment__name">Частная компания iKapitalist Ltd</div>
+                                    <div class="payment__bin">БИН: 191140900129</div>
                                     <h3 class="lk-title3 payment__title3">Детали оплаты</h3>
                                     <div class="payment__details">
                                         <div class="field-group field-group_m_30 payment__field-group">
@@ -258,7 +258,7 @@
                                                 действием Вы формируете заявку на оплату Мы свяжемся с вами в самое
                                                 ближайшее время</p>
                                         </div>
-                                        <h5 class="lk-title5 pay-sidebar__subtitle tdu">Скан платежа</h5>
+                                        <h5 class="lk-title5 pay-sidebar__subtitle">Скан платежа</h5>
                                         <div class="file pay-sidebar__file">
                                             <input class="file__input" type="file" id="file-1" multiple>
                                             <label class="file__btn" for="file-1">
