--- a/news-list.html
+++ b/news-list.html
@@ -296,14 +296,14 @@
                     <a href="./" class="logo footer__logo">
                         <img src="dist/images/logo-white.svg" alt="" class="logo__img">
                     </a>
-                    <p class="footer__about tdu">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа
+                    <p class="footer__about">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа
                     </p>
                     <a href="#" class="footer__link footer__link_vacancy">Вакансии</a>
-                    <div class="footer__copyright tdu">Copyright © 2020 All rights reserved.</div>
+                    <div class="footer__copyright">Copyright © 2020 All rights reserved.</div>
                 </div>
                 <div class="col-lg-3">
                     <div class="footer__title">Адрес</div>
-                    <p class="footer__text footer__address tdu">Мангилик Ел, 55, блок С4.2, офис 265
+                    <p class="footer__text footer__address">Мангилик Ел, 55, блок С4.2, офис 265
                         Нур-Султан, Казахстан</p>
                     <div class="footer__contacts">
                         <div class="footer__item">
@@ -374,7 +374,7 @@
                         </h3>
                         <button class="news-video__play news-video__open">
                             <img src="dist/images/icons/video-play.svg" alt="" class="news-video__icon">
-                            <span class="tdu">Смотреть</span>
+                            <span>Смотреть</span>
                         </button>
                         <img src="dist/images/news-video.jpg" alt="" class="news-video__img">
                     </div>
