--- a/news.html
+++ b/news.html
@@ -703,8 +703,8 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="callback__left">
-                                <div class="callback__title tdu">Привлекайте, инвестируйте</div>
-                                <div class="callback__subtitle tdu">Зарабатывайте</div>
+                                <div class="callback__title">Привлекайте, инвестируйте</div>
+                                <div class="callback__subtitle">Зарабатывайте</div>
                                 <div class="callback__btns">
                                     <button class="btn callback__btn">Привлечь инвестиции</button>
                                 </div>
@@ -741,14 +741,14 @@
                     <a href="./" class="logo footer__logo">
                         <img src="dist/images/logo-white.svg" alt="" class="logo__img">
                     </a>
-                    <p class="footer__about tdu">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа
+                    <p class="footer__about">iKapitalist Ltd. — Инвестиционная и Заёмная Краудфандинговая Платформа
                     </p>
                     <a href="#" class="footer__link footer__link_vacancy">Вакансии</a>
-                    <div class="footer__copyright tdu">Copyright © 2020 All rights reserved.</div>
+                    <div class="footer__copyright">Copyright © 2020 All rights reserved.</div>
                 </div>
                 <div class="col-lg-3">
                     <div class="footer__title">Адрес</div>
-                    <p class="footer__text footer__address tdu">Мангилик Ел, 55, блок С4.2, офис 265
+                    <p class="footer__text footer__address">Мангилик Ел, 55, блок С4.2, офис 265
                         Нур-Султан, Казахстан</p>
                     <div class="footer__contacts">
                         <div class="footer__item">
