--- a/lk-vladelec-zagruzka-doc-2.html
+++ b/lk-vladelec-zagruzka-doc-2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css">
+    <link rel="stylesheet" href="dist/css/styles.css?v=100">
     <title>iKapitalist - Документы компании</title>
 </head>
 
@@ -527,7 +527,7 @@
             </div>
         </div>
     </div>
-    <script src="dist/js/common.js"></script>
+    <script src="dist/js/common.js?v=100"></script>
 </body>
 
 </html>
