--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css">
+    <link rel="stylesheet" href="dist/css/styles.css?v=100">
     <title>iKapitalist - Новости</title>
 </head>
 
@@ -920,7 +920,7 @@
             <button class="close-btn popup__close event-popup__close"></button>
         </div>
     </div>
-    <script src="dist/js/common.js"></script>
+    <script src="dist/js/common.js?v=100"></script>
 </body>
 
 </html>
