--- a/vacancy.html
+++ b/vacancy.html
@@ -380,7 +380,7 @@
             </div>
         </div>
     </footer>
-    <script src="dist/js/common.js"></script>
+    <script src="dist/js/common.js?v=100"></script>
 </body>
 
 </html>
