--- a/lk-payment.html
+++ b/lk-payment.html
@@ -260,7 +260,7 @@
                                         </div>
                                         <h5 class="lk-title5 pay-sidebar__subtitle">Скан платежа</h5>
                                         <div class="file pay-sidebar__file">
-                                            <input class="file__input" type="file" id="file-1" multiple>
+                                            <input class="file__input" type="file" id="file-1">
                                             <label class="file__btn" for="file-1">
                                                 <div class="file__btn-text">Нажмите, чтобы выбрать файл или перетащите сюда</div>
                                             </label>
