add create-deal page

--- a/lk-payment.html
+++ b/lk-payment.html
@@ -259,7 +259,7 @@
                                                 ближайшее время</p>
                                         </div>
                                         <h5 class="lk-title5 pay-sidebar__subtitle">Скан платежа</h5>
-                                        <div class="file pay-sidebar__file">
+                                        <div class="file pay-sidebar__file" data-type="file">
                                             <input class="file__input" type="file" id="file-1">
                                             <label class="file__btn" for="file-1">
                                                 <div class="file__btn-text">Нажмите, чтобы выбрать файл или перетащите сюда</div>
