fix creare-deal-second page adaptive

--- a/lk-vladelec-sozdanie-sdelki-1.html
+++ b/lk-vladelec-sozdanie-sdelki-1.html
@@ -149,15 +149,6 @@
                         <div class="lk-header__mobile-content">
                             <a href="./lk-spisok-sdelok.html" class="back-btn"></a>
                             <div class="lk-header__mobile-title">Компания заемщик</div>
-                            <button class="open-filter-btn"></button>
-                            <div class="filter-menu">
-                                <div class="deal-controls ">
-                                    <button class="lk-btn lk-btn_white lk-btn_small deal-controls__btn">Сохранить</button>
-                                    <button class="lk-btn lk-btn_white lk-btn_small deal-controls__btn">Предварительный просмотр</button>
-                                    <button class="lk-btn lk-btn_white lk-btn_small deal-controls__btn">Отправить</button>
-                                </div>
-                                <button class="back-btn close-filter-btn filter-menu__close "></button>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -426,6 +417,14 @@
         </div>
     </div>
     <div class="mobile-menu">
+        <div class="deal-controls deal-controls_mobile">
+            <button
+                class="lk-btn lk-btn_white lk-btn_small deal-controls__btn">Сохранить</button>
+            <button class="lk-btn lk-btn_white lk-btn_small deal-controls__btn">Предварительный
+                просмотр</button>
+            <button
+                class="lk-btn lk-btn_white lk-btn_small deal-controls__btn">Отправить</button>
+        </div>
         <div class="mobile-menu__list">
             <div class="mobile-menu__item">
                 <a href="./lk-spisok-sdelok.html" class="mobile-menu__link">
