--- a/lk-dobavit-kompanyu.html
+++ b/lk-dobavit-kompanyu.html
@@ -227,7 +227,7 @@
                                                             <div class="lk-title1 lk-title-desktop">Продать долю</div>
                                                             <div class="lk-tabs__main">
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2">Сколько процентов бизнеса Вы продаете?</h2>
+                                                                    <h2 class="lk-title2 lk-title2_second">Сколько процентов бизнеса Вы продаете?</h2>
                                                                     <div class="field lk-tabs__field">
                                                                         <input type="text" name="business-percent" class="field__input"
                                                                             placeholder="100 %">
@@ -246,7 +246,7 @@
                                                             <div class="lk-title1 lk-title-desktop">Продать долю</div>
                                                             <div class="lk-tabs__item-main">
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2">Расскажите немного как работает ваш бизнес</h2>
+                                                                    <h2 class="lk-title2 lk-title2_second">Расскажите немного как работает ваш бизнес</h2>
                                                                     <div class="lk-tabs__radios">
                                                                         <div class="radio-btn lk-tabs__radio">
                                                                             <input type="radio" class="radio-btn__input" id="sell-payment-cards" name="how-work" value="payment-cards">
@@ -286,7 +286,7 @@
                                                             <div class="lk-title1 lk-title-desktop">Продать долю</div>
                                                             <div class="lk-tabs__item-main">
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2">Какая была выручка (оборот) за последние 12 месяцев</h2>
+                                                                    <h2 class="lk-title2 lk-title2_second">Какая была выручка (оборот) за последние 12 месяцев</h2>
                                                                     <div class="lk-tabs__radios">
                                                                         <div class="radio-btn lk-tabs__radio">
                                                                             <input type="radio" id="sell-turnover-less-75-million" class="radio-btn__input" name="turnover" value="less-75-million">
@@ -315,7 +315,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2">Какая была прибыль за предыдущий год</h2>
+                                                                    <h2 class="lk-title2 lk-title2_second">Какая была прибыль за предыдущий год</h2>
                                                                     <div class="lk-tabs__radios">
                                                                         <div class="radio-btn lk-tabs__radio">
                                                                             <input type="radio" id="sell-loan-less-10-million" class="radio-btn__input" name="profit" value="less-10-million">
@@ -355,7 +355,7 @@
                                                             <div class="lk-title1 lk-title-desktop">Продать долю</div>
                                                             <div class="lk-tabs__main">
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2 lk-title2_dark">Компания</h2>
+                                                                    <h2 class="lk-title2">Компания</h2>
                                                                     <div class="lk-tabs__fields">
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-bin" class="field__input"
@@ -394,7 +394,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2 lk-title2_dark">Директор</h2>
+                                                                    <h2 class="lk-title2">Директор</h2>
                                                                     <div class="lk-tabs__fields">
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-bin" class="field__input"
@@ -523,7 +523,7 @@
                                                             <div class="lk-title1 lk-title-desktop">Займ</div>
                                                             <div class="lk-tabs__main">
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2">Для чего вы привлекаете финансирование</h2>
+                                                                    <h2 class="lk-title2 lk-title2_second">Для чего вы привлекаете финансирование</h2>
                                                                     <div class="lk-tabs__radios">
                                                                         <div class="radio-btn lk-tabs__radio lk-tabs__radio_more_funds" data-more-title="Расширения бизнеса">
                                                                             <input type="radio" class="radio-btn__input" id="loan-business-expansion" name="why" value="business-expansion">
@@ -600,7 +600,7 @@
                                                             <div class="lk-title1 lk-title-desktop">Займ</div>
                                                             <div class="lk-tabs__item-main">
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2">Расскажите немного как работает ваш бизнес</h2>
+                                                                    <h2 class="lk-title2 lk-title2_second">Расскажите немного как работает ваш бизнес</h2>
                                                                     <div class="lk-tabs__radios">
                                                                         <div class="radio-btn lk-tabs__radio">
                                                                             <input type="radio" class="radio-btn__input" id="loan-payment-cards" name="how-work" value="payment-cards">
@@ -640,7 +640,7 @@
                                                             <div class="lk-title1 lk-title-desktop">Займ</div>
                                                             <div class="lk-tabs__item-main">
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2">Какая была выручка (оборот) за последние 12 месяцев</h2>
+                                                                    <h2 class="lk-title2 lk-title2_second">Какая была выручка (оборот) за последние 12 месяцев</h2>
                                                                     <div class="lk-tabs__radios">
                                                                         <div class="radio-btn lk-tabs__radio">
                                                                             <input type="radio" id="loan-turnover-less-75-million" class="radio-btn__input" name="turnover" value="less-75-million">
@@ -669,7 +669,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2">Какая была прибыль за предыдущий год</h2>
+                                                                    <h2 class="lk-title2 lk-title2_second">Какая была прибыль за предыдущий год</h2>
                                                                     <div class="lk-tabs__radios">
                                                                         <div class="radio-btn lk-tabs__radio">
                                                                             <input type="radio" id="loan-loan-less-10-million" class="radio-btn__input" name="profit" value="less-10-million">
@@ -709,7 +709,7 @@
                                                             <div class="lk-title1 lk-title-desktop">Займ</div>
                                                             <div class="lk-tabs__main">
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2 lk-title2_dark">Компания</h2>
+                                                                    <h2 class="lk-title2">Компания</h2>
                                                                     <div class="lk-tabs__fields">
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-bin" class="field__input"
@@ -748,7 +748,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="lk-tabs__group">
-                                                                    <h2 class="lk-title2 lk-title2_dark">Директор</h2>
+                                                                    <h2 class="lk-title2">Директор</h2>
                                                                     <div class="lk-tabs__fields">
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-bin" class="field__input"
