--- a/news.html
+++ b/news.html
@@ -121,7 +121,7 @@
                         <div class="type types__item">Магазин</div>
                     </div>
                     <div class="news__main">
-                        <div class="row gy-4">
+                        <div class="row gy-3">
                             <div class="col-12">
                                 <div class="news-item news-item_preview">
                                     <img src="dist/images/news/1.jpg" alt="" class="news-item__img">
@@ -138,9 +138,9 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <div class="news-info box news-info_slider swiper">
+                                <div class="news-info news-info_slider swiper">
                                     <div class="swiper-wrapper">
-                                        <div class="swiper-slide">
+                                        <div class="swiper-slide box">
                                             <div class="row news-info__row">
                                                 <div class="col-lg-8">
                                                     <div class="news-info__bg">
@@ -161,7 +161,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="swiper-slide">
+                                        <div class="swiper-slide box">
                                             <div class="row news-info__row">
                                                 <div class="col-lg-8">
                                                     <div class="news-info__bg">
@@ -182,7 +182,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="swiper-slide">
+                                        <div class="swiper-slide box">
                                             <div class="row news-info__row">
                                                 <div class="col-lg-8">
                                                     <div class="news-info__bg">
@@ -203,7 +203,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="swiper-slide">
+                                        <div class="swiper-slide box">
                                             <div class="row news-info__row">
                                                 <div class="col-lg-8">
                                                     <div class="news-info__bg">
@@ -224,7 +224,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="swiper-slide">
+                                        <div class="swiper-slide box">
                                             <div class="row news-info__row">
                                                 <div class="col-lg-8">
                                                     <div class="news-info__bg">
