fix file blocks

--- a/lk-vladelec-documenty.html
+++ b/lk-vladelec-documenty.html
@@ -178,7 +178,7 @@
                                 <div class="col-xl-8">
                                     <div class="doc-item request__doc-item">
                                         <div class="lk-title1 lk-title1_blue doc-item__title">Компания заемщик</div>
-                                        <div class="file doc-item__file doc-item__file_full">
+                                        <div class="file doc-item__file doc-item__file_full" data-type="file">
                                             <h3 class="lk-title3 file__title3">Налоговая отчетность 6 годичная за последние 12-36 месяцев</h3>
                                             <input class="file__input" type="file" id="file-1">
                                             <label class="file__btn" for="file-1">
@@ -207,7 +207,7 @@
                                             </div>
                                             <p class="file__error-text">Необходимо заполнить “title”</p>
                                         </div>
-                                        <div class="file doc-item__file doc-item__file_full">
+                                        <div class="file doc-item__file doc-item__file_full" data-type="file">
                                             <h3 class="lk-title3 file__title3">Финансовая отчетность</h3>
                                             <input class="file__input" type="file" id="file-2">
                                             <label class="file__btn" for="file-2">
@@ -236,7 +236,7 @@
                                             </div>
                                             <p class="file__error-text">Необходимо заполнить “title”</p>
                                         </div>
-                                        <div class="file doc-item__file doc-item__file_full">
+                                        <div class="file doc-item__file doc-item__file_full" data-type="file">
                                             <h3 class="lk-title3 file__title3">Финансовый план, включая прогнозный Отчет о прибылях и убытках и Отчет о движении денег на предстоящие 12 месяцев</h3>
                                             <input class="file__input" type="file" id="file-3">
                                             <label class="file__btn" for="file-3">
@@ -265,7 +265,7 @@
                                             </div>
                                             <p class="file__error-text">Необходимо заполнить “title”</p>
                                         </div>
-                                        <div class="file doc-item__file doc-item__file_full">
+                                        <div class="file doc-item__file doc-item__file_full" data-type="file">
                                             <h3 class="lk-title3 file__title3">Кредитные обязательства, компании, директоров и акционеров с детальными расшифровками</h3>
                                             <input class="file__input" type="file" id="file-4">
                                             <label class="file__btn" for="file-4">
@@ -294,7 +294,7 @@
                                             </div>
                                             <p class="file__error-text">Необходимо заполнить “title”</p>
                                         </div>
-                                        <div class="file doc-item__file doc-item__file_full">
+                                        <div class="file doc-item__file doc-item__file_full" data-type="file">
                                             <h3 class="lk-title3 file__title3">Декларация о собственных активах компании и недвижимости</h3>
                                             <input class="file__input" type="file" id="file-5">
                                             <label class="file__btn" for="file-5">
