--- a/lk-vladelec-zagruzka-doc-2.html
+++ b/lk-vladelec-zagruzka-doc-2.html
@@ -310,7 +310,7 @@
                                         </div>
                                         <div class="doc-item__group">
                                             <div class="lk-title1 lk-title1_blue doc-item__title">Договора</div>
-                                            <div class="file doc-item__file">
+                                            <div class="file doc-item__file" data-type="file">
                                                 <p class="file__text">Доверенность кто подает заявку</p>
                                                 <input class="file__input" type="file" id="file-1">
                                                 <label class="file__btn" for="file-1">
@@ -338,7 +338,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="file doc-item__file">
+                                            <div class="file doc-item__file" data-type="file">
                                                 <p class="file__text">Удостоверение лицевая сторона</p>
                                                 <input class="file__input" type="file" id="file-2">
                                                 <label class="file__btn" for="file-2">
@@ -366,7 +366,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="file doc-item__file">
+                                            <div class="file doc-item__file" data-type="file">
                                                 <p class="file__text">Удостоверение обратная сторона</p>
                                                 <input class="file__input" type="file" id="file-3">
                                                 <label class="file__btn" for="file-3">
@@ -394,7 +394,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="file file_error doc-item__file">
+                                            <div class="file file_error doc-item__file" data-type="file">
                                                 <p class="file__text">Выписка с банковского счёта компании</p>
                                                 <input class="file__input" type="file" id="file-4">
                                                 <label class="file__btn" for="file-4">
@@ -423,7 +423,7 @@
                                                 </div>
                                                 <p class="file__error-text">Необходимо заполнить “Выписка с банковской компании”</p>
                                             </div>
-                                            <div class="file doc-item__file">
+                                            <div class="file doc-item__file" data-type="file">
                                                 <p class="file__text">Договор с клиентом</p>
                                                 <input class="file__input" type="file" id="file-5">
                                                 <label class="file__btn" for="file-5">
